deployments/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workspaceservice
  labels:
    name: workspaceservice
    app: workspaceservice
